[ci skip] deploy

--- a/content/basics/collections.ipynb
+++ b/content/basics/collections.ipynb
@@ -4,6 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Prerequisites \n",
+    "\n",
+    "- Types\n",
+    "\n",
     "# Collections\n",
     "\n",
     "Previously, we were introduced to individual types that exist in Python. \n",
