--- a/content/basics/flow_control.ipynb
+++ b/content/basics/flow_control.ipynb
@@ -4,6 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Prerequisites \n",
+    "\n",
+    "- Types\n",
+    "\n",
     "# Flow control"
    ]
   },
@@ -191,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-23T12:19:48.948753Z",
@@ -200,7 +204,7 @@
    },
    "outputs": [],
    "source": [
-    "### Write your code here\n"
+    "### Write your code here"
    ]
   },
   {
