--- a/content/basics/types.ipynb
+++ b/content/basics/types.ipynb
@@ -4,6 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Prerequisites \n",
+    "\n",
+    "None\n",
+    "\n",
     "# Types\n",
     "\n",
     "Python essentially can be thought of as having three types of single object variable:\n",
