--- a/content/data_work/optimisation.ipynb
+++ b/content/data_work/optimisation.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Optimization\n",
+    "### Prerequisites \n",
+    "\n",
+    "- Functions\n",
+    "- Methods and objects\n",
+    "- Types\n",
+    "- NumPy arrays\n",
+    "- Libraries\n",
+    "- Collections\n",
+    "\n",
+    "# Optimisation\n",
     "\n",
     "It is a common problem in mathematics and chemistry to find the lowest value of a function, the **global minimum**. For example, the lowest configuration of a molecule is the one in which the energy of the molecule is minimized. Python can be used to find the minimum of a function. \n",
     "\n",
@@ -702,9 +711,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
