--- a/content/basics/and_or.ipynb
+++ b/content/basics/and_or.ipynb
@@ -4,6 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Prerequisites \n",
+    "\n",
+    "- Types\n",
+    "- Collections\n",
+    "- Flow Control\n",
+    "\n",
     "# And and or operations"
    ]
   },
@@ -23,14 +29,13 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T20:19:41.851640Z",
-     "start_time": "2020-03-30T20:19:40.985745Z"
+     "end_time": "2020-04-07T06:26:21.648942Z",
+     "start_time": "2020-04-07T06:26:20.830411Z"
     }
    },
    "outputs": [],
    "source": [
-    "import periodic_table_20 as pt\n",
-    "periodic_table_20 = pt.create()"
+    "from periodic_table_20 import periodic_table_20"
    ]
   },
   {
@@ -45,8 +50,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T20:19:41.866246Z",
-     "start_time": "2020-03-30T20:19:41.853842Z"
+     "end_time": "2020-04-07T06:26:21.662849Z",
+     "start_time": "2020-04-07T06:26:21.651173Z"
     }
    },
    "outputs": [
@@ -82,8 +87,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T20:19:41.873185Z",
-     "start_time": "2020-03-30T20:19:41.868856Z"
+     "end_time": "2020-04-07T06:26:21.672119Z",
+     "start_time": "2020-04-07T06:26:21.665734Z"
     }
    },
    "outputs": [
@@ -116,8 +121,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T20:19:41.883267Z",
-     "start_time": "2020-03-30T20:19:41.877102Z"
+     "end_time": "2020-04-07T06:26:21.684153Z",
+     "start_time": "2020-04-07T06:26:21.676098Z"
     }
    },
    "outputs": [
@@ -148,8 +153,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T20:19:41.893239Z",
-     "start_time": "2020-03-30T20:19:41.886154Z"
+     "end_time": "2020-04-07T06:26:21.693439Z",
+     "start_time": "2020-04-07T06:26:21.687168Z"
     }
    },
    "outputs": [
@@ -180,8 +185,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T20:19:41.902393Z",
-     "start_time": "2020-03-30T20:19:41.897000Z"
+     "end_time": "2020-04-07T06:26:21.705176Z",
+     "start_time": "2020-04-07T06:26:21.698359Z"
     }
    },
    "outputs": [
@@ -243,8 +248,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T20:19:41.912391Z",
-     "start_time": "2020-03-30T20:19:41.905614Z"
+     "end_time": "2020-04-07T06:26:21.714180Z",
+     "start_time": "2020-04-07T06:26:21.707338Z"
     }
    },
    "outputs": [
@@ -277,8 +282,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T20:19:41.921160Z",
-     "start_time": "2020-03-30T20:19:41.916273Z"
+     "end_time": "2020-04-07T06:26:21.723058Z",
+     "start_time": "2020-04-07T06:26:21.719819Z"
     }
    },
    "outputs": [],
@@ -322,8 +327,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T20:19:41.932831Z",
-     "start_time": "2020-03-30T20:19:41.925002Z"
+     "end_time": "2020-04-07T06:26:21.735489Z",
+     "start_time": "2020-04-07T06:26:21.726467Z"
     }
    },
    "outputs": [
@@ -354,8 +359,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T20:19:41.941439Z",
-     "start_time": "2020-03-30T20:19:41.935449Z"
+     "end_time": "2020-04-07T06:26:21.744830Z",
+     "start_time": "2020-04-07T06:26:21.738449Z"
     }
    },
    "outputs": [
@@ -386,7 +391,7 @@
     "\n",
     "3) `if True:` is evaluated and \"Silicon is in the p block.\" is printed. \n",
     "\n",
-    "How does the process change if sodium id evaluated?"
+    "How does the process change if sodium is evaluated?"
    ]
   },
   {
@@ -394,8 +399,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T20:19:41.953004Z",
-     "start_time": "2020-03-30T20:19:41.946829Z"
+     "end_time": "2020-04-07T06:26:21.753251Z",
+     "start_time": "2020-04-07T06:26:21.747970Z"
     }
    },
    "outputs": [
@@ -436,8 +441,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-30T20:19:41.961870Z",
-     "start_time": "2020-03-30T20:19:41.956756Z"
+     "end_time": "2020-04-07T06:26:21.758704Z",
+     "start_time": "2020-04-07T06:26:21.755802Z"
     }
    },
    "outputs": [],
